# GAMES301-HW

./: .gitmodules  README.md  build_windows.bat  surface_framework_readme.docx
Surface_Framework_Cmake/: CMakelists.txt  README.md
Surface_Framework_Cmake/src/: CMakeLists.txt  surfacemeshprocessing.cpp  surfacemeshprocessing.h  surfacemeshprocessing.qrc
Surface_Framework_Cmake/src/MeshViewer/: MainViewerWidget.cpp  MainViewerWidget.h  MeshParamWidget.cpp  MeshParamWidget.h  MeshViewerWidget.cpp  MeshViewerWidget.h  QGLViewerWidget.cpp  QGLViewerWidget.h
Surface_Framework_Cmake/src/PolyMesh/: PolyMesh.cpp
Surface_Framework_Cmake/src/homeworks/BoundaryFirstFlattening/: Util_BoundaryFirstFlattening.cpp  Util_BoundaryFirstFlattening.h
Surface_Framework_Cmake/src/homeworks/EnergyEigensystems/: Util_DataStructure.cpp  Util_DataStructure.h  Util_EnergyEigensystems.cpp  Util_EnergyEigensystems.h
Surface_Framework_Cmake/src/homeworks/FreeBoundary/: Util_FreeBoundary.cpp  Util_FreeBoundary.h
Surface_Framework_Cmake/src/homeworks/TutteEmbedding/: Util_TutteEmbedding.cpp  Util_TutteEmbedding.h
data/: hand_m_kkk.off
